# Elevator-Simulator

./: .gitignore  About.txt  About_bak.txt  AdvElevator.cpp  AdvElevator.h  CMakeLists.txt  Elevator.cpp  Elevator.h  Person.cpp  Person.hpp  Printer.cpp  Printer.h  README.md  SolveElevator.cpp  config.cpp  config.h  main.cpp
Super_Elevator/: AdvElevator.cpp  AdvElevator.h  CMakeLists.txt  Logger.cpp  Printer.h  SolveAdvElevator.cpp  SolveAdvelevator.cpp  SolveElevator.cpp  TerminalControl.cpp  TerminalControl.h  config.cpp  config.h  main.cpp  test.cpp
Super_Elevator/Elevator/: AdvElevator.cpp  AdvElevator.h  Elevator.cpp  Elevator.h  Person.hpp
Super_Elevator/Logger/: Logger.h
Super_Elevator/Printer/: About.txt  OpenDoor.txt  Printer.cpp  Printer.h
sources/: Super_Elevator v1.0.1.rar  Super_Elevator v1.0.3.rar
